istio/fault-injection-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fault-injection-abort
spec:
  hosts:
  - ms-anomaly-detection.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 10
    match:
    - uri:
        prefix: /v1/cleanAnomaly
    route:
    - destination:
        host: ms-anomaly-detection.default.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: ms-anomaly-detection.default.svc.cluster.local
        port:
          number: 8080
