istio/request-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simulated-iot-cloud-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: request-routing
spec:
  hosts:
  - "*"
  gateways:
  - simulated-iot-cloud-gateway
  http:
  - match:
    - uri:
        prefix: /v1/generateSensorData
    route:
    - destination:
        host: ms-iot.default.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /v1/detectAnomaly
    route:
    - destination:
        host: ms-anomaly-detection.default.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /v1/predict
    route:
    - destination:
        host: ms-prediction.default.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /v1/assessPredictions
    - uri:
        prefix: /v1/getAccuratePrediction
    - uri:
        prefix: /v1/getValidPredictions
    route:
    - destination:
        host: ms-analytics.default.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: api-gateway.default.svc.cluster.local
        port:
          number: 8080
