istio/retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry
spec:
  hosts:
  - ms-prediction.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /v1/predict
    route:
    - destination:
        host: ms-prediction.default.svc.cluster.local
        port:
          number: 8080
    retries:
      attempts: 10
      perTryTimeout: 2s
