istio/test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iot
spec:
  hosts:
  - "*"
    # - iot.default.svc.cluster.local
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: ms-iot.default.svc.cluster.local
        port:
          number: 8080
