istio/timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simulated-iot-cloud-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: timeout
spec:
  hosts:
  - "*"
  gateways:
  - simulated-iot-cloud-gateway
  http:
  - route:
    - destination:
        host: api-gateway.default.svc.cluster.local
        port:
          number: 8080
    timeout: 5s
