istio/traffic-shifting-0-100.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: traffic-shifting-0-100
spec:
  hosts:
  - ms-prediction.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /v1/predict
    route:
    - destination:
        host: ms-prediction.default.svc.cluster.local
        subset: v1
        port:
          number: 8080
      weight: 0
    - destination:
        host: ms-prediction.default.svc.cluster.local
        subset: v2
        port:
          number: 8080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-prediction
spec:
  host: ms-prediction.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
